--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,21 @@ jobs:
         name: Uses Node.js ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
-      - run : npm install -g yarn 
+      
+      - uses: borales/actions-yarn@v2.0.0
+        name : Yarn install
+        with:
+          cmd: install # will run `yarn install` command
 
-      - name: Build Next
-        run: |
-          yarn install
-          yarn build
-          yarn export
+      - uses: borales/actions-yarn@v2.0.0
+        name : Yarn build
+        with:
+          cmd: build # will run `yarn install` command
+
+      - uses: borales/actions-yarn@v2.0.0
+        name : Yarn export
+        with:
+          cmd: export # will run `yarn install` command
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
