--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: damongolding/next
   branch: master
 
 media_folder: public/img
@@ -10,8 +11,8 @@ collections:
     label: "Site" # Used in the UI
     files:
       - label: "Home"
-        name : "Home"
-        file : "data/data.md"
+        name: "Home"
+        file: "data/data.md"
         fields: # The fields for each document, usually in front matter
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Name", name: "name", widget: "string"}
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Name", name: "name", widget: "string" }
