--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,10 +1,14 @@
 backend:
-  name: git-gateway
-  repo: damongolding/next
+  name: github
+  repo: "damongolding/next"
   branch: master
 
-media_folder: public/img
-public_folder: img
+media_folder: "public/img"
+public_folder: "/img"
+
+site_url: https://damongolding.github.io/next/
+
+show_preview_links: false
 
 collections:
   - name: "Site" # Used in routes, e.g., /admin/collections/blog
@@ -12,7 +16,8 @@ collections:
     files:
       - label: "Home"
         name: "Home"
-        file: "data/data.md"
+        file: "data/foo.json"
+        extension: json
         fields: # The fields for each document, usually in front matter
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Name", name: "name", widget: "string" }
