--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,11 +2,16 @@ backend:
   name: github
   repo: "damongolding/next"
   branch: master
+  site_domain : 2e327e60-5e53-40f6-8d7b-b64a561e7a65
+  site_id : 2e327e60-5e53-40f6-8d7b-b64a561e7a65
+  base_url : https://api.netlify.com
+
 
 media_folder: "public/img"
 public_folder: "/img"
 
 site_domain : 2e327e60-5e53-40f6-8d7b-b64a561e7a65
+site_id : 2e327e60-5e53-40f6-8d7b-b64a561e7a65
 base_url : https://api.netlify.com
 
 show_preview_links: false
