--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,10 +1,8 @@
 backend:
   name: github
-  repo: "damongolding/next"
+  repo: "https://github.com/damongolding/next"
   branch: master
-  site_domain : 2e327e60-5e53-40f6-8d7b-b64a561e7a65
-  site_id : 2e327e60-5e53-40f6-8d7b-b64a561e7a65
-  base_url : https://api.netlify.com
+  site_domain : elegant-panini-a5ca12.netlify.app
 
 
 media_folder: "public/img"
